# Sensor-dash

./: .env.example  .gitignore  README.md  REFACTORING_CHECKLIST.md  SETUP.md  app_docdb.py  app_s3.py  pyproject.toml  requirements.txt  sensor_dash_S3.py  sensor_dash_docDB.py
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: project_overview.md
core/: __init__.py  callbacks.py  data_processor.py  ui_components.py  utils.py
loaders/: __init__.py  base.py  docdb_loader.py  s3_loader.py
