[project]
name = "sensor-dashboard"
version = "1.0.0"
description = "Sensor data dashboard with DocumentDB and S3 support"
requires-python = ">=3.9"
dependencies = [
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "dash-auth>=2.0.0",
    "dash-daq>=0.5.0",
    "dash-leaflet>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "boto3>=1.28.0",
    "pymongo>=4.5.0",
    "plotly>=5.17.0",
    "pytz>=2023.3",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "loaders"]

[tool.uv]
dev-dependencies = []
